add nginx container for web-server

--- a/file/rails/Gemfile
+++ b/file/rails/Gemfile
@@ -40,6 +40,8 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'slim-rails', '~> 3.2'
 gem 'html2slim', '~> 0.2'
 gem 'rails_autolink', '~> 1.1'
+gem 'will_paginate'
+gem 'bootstrap-will_paginate'
 
 # Use boostrp
 gem 'bootstrap', '~> 4.3'
@@ -48,6 +50,13 @@ gem 'jquery-rails', '~> 4.3'
 
 # Use VScode plugin
 gem 'solargraph', '~> 0.38'
+
+# Use AWS s3
+gem 'carrierwave', '~> 2.0'
+gem 'fog', '~> 2.2'
+
+# Use for nginx
+gem 'unicorn'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -68,6 +77,7 @@ end
 group :test do
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '>= 2.15'
+  gem 'launchy'
   gem 'selenium-webdriver', '~> 3'
   # Easy installation and use of chromedriver to run system tests with Chrome
   gem 'chromedriver-helper'
