--- a/file/docker-compose.yml
+++ b/file/docker-compose.yml
@@ -2,10 +2,9 @@ version: '3'
 services:
     db:
         build:
-            context: .
-            dockerfile: Dockerfile_MySQL
-        environment:
-          MYSQL_ROOT_PASSWORD: root
+            context: ./mysql
+            dockerfile: Dockerfile
+        env_file: ./mysql/mysql.env
         volumes:
             - "../../rails_env/db-data:/var/lib/mysql"
         ports:
@@ -13,18 +12,27 @@ services:
 
     app:
         build:
-          context: .
-          dockerfile: Dockerfile_Rails
-        environment:
-            MYSQL_ENCODING: utf8
-            MYSQL_USER: root
-            MYSQL_PASSWORD: root
-            MYSQL_DATABASE: app_db
+          context: ./rails
+          dockerfile: Dockerfile
+        env_file: ./rails/rails.env
         volumes:
             - "../../rails_env:/app"
         ports:
             - "3000:3000"
+        expose:
+            - "80"
         tty: true
         links:
             - db
         working_dir: "/app"
+
+    web:
+        build:
+          context: ./nginx
+          dockerfile: Dockerfile
+        volumes:
+            - "../../rails_env:/app"
+        ports:
+          - "80:80"
+        links:
+            - app
