--- a/file/nginx/app.conf
+++ b/file/nginx/app.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80;
-  server_name localhost;
+  server_name web;
 
   root /app/public;
 
@@ -15,7 +15,7 @@ server {
     proxy_set_header    X-Real-IP           $remote_addr;
     proxy_set_header    X-Forwarded-Host    $host;
     proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    proxy_set_header    X-Forwarded-Proto   $scheme;
+    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_pass http://unicorn;
   }
 }
